# Axion-Trader

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  pyproject.toml
backend/: __init__.py  main.py
backend/api/: __init__.py  app.py  routes.py
backend/brain/: __init__.py  aggregator.py  gemini.py  narrative.py  reflection.py  rules.py
backend/config/: __init__.py  settings.py
backend/data/: __init__.py  fetcher.py  market_data.py  onchain.py  sentiment.py
backend/execution/: __init__.py  shock_guard.py  trader.py
backend/indicators/: __init__.py  confluence.py  engine.py  regime.py  volume_profile.py
backend/memory/: __init__.py  store.py
backend/risk/: __init__.py  guard.py
backtest/: __init__.py  data.py  optimizer.py  report.py  run.py  simulator.py
backtest/cache/: BTCUSD_5m.csv  BTCUSD_60m.csv
backtest/results/: backtest_BTCUSD_20260330_015558.xlsx  backtest_BTCUSD_20260330_020616.xlsx  backtest_BTCUSD_20260330_021410.xlsx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AgentStatus.jsx  IndicatorPanel.jsx  InfoTooltip.jsx  MetricsBar.jsx  ModeToggle.jsx  PnLCard.jsx  PriceChart.jsx  TradeLog.jsx
frontend/src/hooks/: useAgentState.js  useMetrics.js  useTrades.js
frontend/src/lib/: api.js  utils.js
frontend/src/pages/: Dashboard.jsx  TradesPage.jsx
